--- a/.github/workflows/terraform-workspaces.yaml
+++ b/.github/workflows/terraform-workspaces.yaml
@@ -32,6 +32,8 @@ jobs:
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_wrapper: false
 
       - name: Config management workflow
         working-directory: aws_bucket
