--- a/.github/workflows/terraform-workspaces.yaml
+++ b/.github/workflows/terraform-workspaces.yaml
@@ -40,5 +40,4 @@ jobs:
         run: |
           terraform init
           terraform workspace new ${{ env.environment }}
-          terraform workspace select ${{ env.environment }} && terraform plan
-          terraform workspace select ${{ env.environment }} && terraform apply -auto-approve
+          terraform workspace select ${{ env.environment }} && terraform destroy -auto-approve
