--- a/.github/workflows/terraform-workspaces.yaml
+++ b/.github/workflows/terraform-workspaces.yaml
@@ -1,4 +1,4 @@
-#YAML for proyect
+#YAML 
 name: Config management workflow
 
 on:
@@ -42,4 +42,3 @@ jobs:
           terraform workspace new ${{ env.environment }}
           terraform workspace select ${{ env.environment }} && terraform plan
           terraform workspace select ${{ env.environment }} && terraform apply -auto-approve
-          terraform workspace select ${{ env.environment }} && terraform destroy -auto-approve
